--- a/config.ini
+++ b/config.ini
@@ -1,7 +1,9 @@
 [General]
 window_1_symbol=MU
-window_1_pos=@Point(-714 243)
-window_1_size=@Size(357 340)
+window_1_pos=@Point(-1147 466)
+window_1_size=@Size(488 265)
 window_2_symbol=TSLA
-window_2_pos=@Point(-1454 186)
-window_2_size=@Size(660 553)
+window_2_pos=@Point(-1435 151)
+window_2_size=@Size(682 218)
+window_1_drag_resize=false
+window_2_drag_resize=false
