lock windows when settings window is closed

--- a/config.ini
+++ b/config.ini
@@ -1,7 +1,8 @@
 [General]
 window_1_symbol=MU
-window_1_pos=@Point(-1003 50)
+window_1_pos=@Point(-1471 368)
 window_1_size=@Size(600 300)
 window_2_symbol=TSLA
 window_2_pos=@Point(-1474 50)
 window_2_size=@Size(450 300)
+launch_on_startup=true
