fixed quitting after sleep, working on individual chart settings

--- a/config.ini
+++ b/config.ini
@@ -1,5 +1,7 @@
 [General]
-window_1_symbol=MU
-window_0_pos=@Point(-1026 479)
+window_0_symbol=CVS
+window_0_pos=@Point(-1512 481)
 window_0_size=@Size(384 216)
-window_2_symbol=CVS
+window_1_symbol=MU
+window_1_pos=@Point(-1055 453)
+window_1_size=@Size(384 216)
