fixed crashes after sleep mode, implement bought line, fixed logging

--- a/config.ini
+++ b/config.ini
@@ -1,7 +1,12 @@
 [General]
 window_0_symbol=CVS
-window_0_pos=@Point(-1512 481)
+window_0_pos=@Point(-657 190)
 window_0_size=@Size(384 216)
 window_1_symbol=MU
-window_1_pos=@Point(-1055 453)
+window_1_pos=@Point(-650 495)
 window_1_size=@Size(384 216)
+window_0_bought_line=true
+window_1_bought_line=true
+launch_on_startup=false
+window_1_bought_line_value=800
+window_0_bought_line_value=1
