pyqtgraph removed side padding, but x axis labels cutoff

--- a/config.ini
+++ b/config.ini
@@ -1,9 +1,9 @@
 [General]
-window_0_symbol=CVS
-window_0_pos=@Point(-1524 87)
-window_0_size=@Size(598 255)
+window_0_symbol=QDVE.DE
+window_0_pos=@Point(-1257 235)
+window_0_size=@Size(447 203)
 window_1_symbol=MU
-window_1_pos=@Point(-895 112)
+window_1_pos=@Point(-1259 24)
 window_1_size=@Size(479 205)
 window_0_bought_line=true
 window_1_bought_line=true
