--- a/config.ini
+++ b/config.ini
@@ -1,12 +1,17 @@
 [General]
-window_0_symbol=CVS
-window_0_pos=@Point(-1514 229)
+window_0_symbol=MU
+window_0_pos=@Point(-1474 343)
 window_0_size=@Size(384 216)
-window_1_symbol=MU
-window_1_pos=@Point(-1467 678)
-window_1_size=@Size(384 216)
+window_2_symbol=CVS
+window_2_pos=@Point(-804 726)
+window_2_size=@Size(384 216)
+window_0_bought_line_value=66
 window_0_bought_line=true
-window_1_bought_line=true
+window_3_symbol=AMZN
+window_3_pos=@Point(-1381 648)
+window_3_size=@Size(384 216)
+window_2_bought_line_value=67
+window_2_bought_line=true
+window_3_bought_line=false
+window_3_bought_line_value=133
 launch_on_startup=false
-window_1_bought_line_value=66.64
-window_0_bought_line_value=76.65
