--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+altgraph==0.17.4
 appdirs==1.4.4
 beautifulsoup4==4.12.2
 BlurWindow==1.2.1
@@ -9,14 +10,20 @@ idna==3.4
 lxml==4.9.3
 multitasking==0.0.11
 numpy==1.26.0
+packaging==23.2
 pandas==2.1.1
 peewee==3.16.3
+pefile==2023.2.7
+Pillow==10.0.1
+pyinstaller==6.0.0
+pyinstaller-hooks-contrib==2023.9
 PyQt6==6.5.2
 PyQt6-Qt6==6.5.2
 PyQt6-sip==13.5.2
 pyqtgraph==0.13.3
 python-dateutil==2.8.2
 pytz==2023.3.post1
+pywin32-ctypes==0.2.2
 requests==2.31.0
 six==1.16.0
 soupsieve==2.5
