bought line height correction WIP, update to working yfinance version

--- a/config.ini
+++ b/config.ini
@@ -1,7 +1,22 @@
 [General]
 window_0_symbol=MU
-window_0_pos=@Point(-1464 87)
-window_0_size=@Size(1348 701)
+window_0_pos=@Point(-1042 735)
+window_0_size=@Size(684 200)
 window_0_bought_line=true
 launch_on_startup=false
-window_0_bought_line_value=66
+window_0_bought_line_value=1
+window_1_symbol=SXR8.DE
+window_1_pos=@Point(-1151 408)
+window_1_size=@Size(384 216)
+window_2_symbol=EUNM.DE
+window_2_pos=@Point(-1151 408)
+window_2_size=@Size(384 216)
+window_3_symbol=VVSM.DE
+window_3_pos=@Point(-1151 408)
+window_3_size=@Size(384 216)
+window_4_symbol=EUNL.DE
+window_4_pos=@Point(-1151 408)
+window_4_size=@Size(384 216)
+window_5_symbol=QDVE.DE
+window_5_pos=@Point(-1151 408)
+window_5_size=@Size(384 216)
