build own universal2 wheel for numpy and pandas

--- a/requirements.txt
+++ b/requirements.txt
@@ -9,7 +9,7 @@ html5lib==1.1
 idna==3.4
 lxml==4.9.3
 multitasking==0.0.11
-numpy==1.26.0
+numpy==1.26.3
 packaging==23.2
 pandas==2.1.1
 peewee==3.16.3
@@ -31,7 +31,7 @@ tzdata==2023.3
 urllib3==2.0.5
 webencodings==0.5.1
 yfinance==0.2.36
+pyobjc==10.1
 #PyQt5 conflicts with pyqt6
-# pyobjc==10.1
 # PyQt5==5.15.10 
 # to install universal2 ver, need to install with python3 -m pip inst... (to make sure universal2 python ver is used)
