change folder structure

--- a/requirements.txt
+++ b/requirements.txt
@@ -6,7 +6,7 @@ certifi==2023.7.22
 charset-normalizer==3.2.0
 frozendict==2.3.8
 html5lib==1.1
-idna==3.4
+idna==3.7
 lxml==4.9.3
 multitasking==0.0.11
 numpy==1.26.3
@@ -14,7 +14,7 @@ packaging==23.2
 pandas==2.1.1
 peewee==3.16.3
 pefile==2023.2.7
-Pillow==10.0.1
+Pillow==10.3.0
 pyinstaller==6.3.0
 pyinstaller-hooks-contrib==2024.0
 PyQt6==6.6.1
@@ -28,10 +28,10 @@ requests==2.31.0
 six==1.16.0
 soupsieve==2.5
 tzdata==2023.3
-urllib3==2.0.5
+urllib3==2.2.1
 webencodings==0.5.1
 yfinance==0.2.36
-pyobjc==10.1
+pyobjc==10.1; sys_platform == 'darwin' # MacOS only
 #PyQt5 conflicts with pyqt6
 # PyQt5==5.15.10 
 # to install universal2 ver, need to install with python3 -m pip inst... (to make sure universal2 python ver is used)
