add screenshot, links

--- a/src/config.ini
+++ b/src/config.ini
@@ -1,4 +1,25 @@
 [General]
 window_1_symbol=NXPI
-window_1_pos=@Point(-1144 710)
+window_1_pos=@Point(-1410 768)
 window_1_size=@Size(386 216)
+window_3_symbol=GOOG
+window_3_pos=@Point(-602 144)
+window_3_size=@Size(384 216)
+window_4_symbol=NVDA
+window_4_pos=@Point(-1014 144)
+window_4_size=@Size(384 216)
+window_5_symbol=MSFT
+window_5_pos=@Point(-1015 388)
+window_5_size=@Size(384 216)
+window_6_symbol=VWCE.DE
+window_6_pos=@Point(768 408)
+window_6_size=@Size(384 216)
+window_7_symbol=VWCE.DE
+window_7_pos=@Point(768 408)
+window_7_size=@Size(384 216)
+window_8_symbol=BTC-USD
+window_8_pos=@Point(768 408)
+window_8_size=@Size(384 216)
+window_9_symbol=AAPL
+window_9_pos=@Point(-602 388)
+window_9_size=@Size(384 216)
