improve error handling

--- a/src/config.ini
+++ b/src/config.ini
@@ -11,15 +11,9 @@ window_4_size=@Size(384 216)
 window_5_symbol=MSFT
 window_5_pos=@Point(-1015 388)
 window_5_size=@Size(384 216)
-window_6_symbol=VWCE.DE
-window_6_pos=@Point(768 408)
-window_6_size=@Size(384 216)
-window_7_symbol=VWCE.DE
-window_7_pos=@Point(768 408)
-window_7_size=@Size(384 216)
-window_8_symbol=BTC-USD
-window_8_pos=@Point(768 408)
-window_8_size=@Size(384 216)
 window_9_symbol=AAPL
 window_9_pos=@Point(-602 388)
 window_9_size=@Size(384 216)
+window_10_symbol=BTC-EUR
+window_10_pos=@Point(768 408)
+window_10_size=@Size(384 216)
