--- a/src/config.ini
+++ b/src/config.ini
@@ -4,16 +4,18 @@ window_1_pos=@Point(-1410 768)
 window_1_size=@Size(386 216)
 window_3_symbol=GOOG
 window_3_pos=@Point(-602 144)
-window_3_size=@Size(384 216)
+window_3_size=@Size(406 216)
 window_4_symbol=NVDA
 window_4_pos=@Point(-1014 144)
-window_4_size=@Size(384 216)
+window_4_size=@Size(400 216)
 window_5_symbol=MSFT
 window_5_pos=@Point(-1015 388)
-window_5_size=@Size(384 216)
-window_9_symbol=AAPL
-window_9_pos=@Point(-602 388)
-window_9_size=@Size(384 216)
-window_10_symbol=BTC-EUR
-window_10_pos=@Point(768 408)
-window_10_size=@Size(384 216)
+window_5_size=@Size(393 216)
+window_10_symbol=AAPL
+window_10_pos=@Point(-599 388)
+window_10_size=@Size(400 216)
+window_11_pos=@Point(768 408)
+window_11_size=@Size(384 216)
+window_11_symbol=MU
+window_12_pos=@Point(768 408)
+window_12_size=@Size(384 216)
