option for percentage, fix pyinstaller paths

--- a/src/config.ini
+++ b/src/config.ini
@@ -1,21 +1,14 @@
 [General]
-window_1_symbol=NXPI
-window_1_pos=@Point(-1410 768)
-window_1_size=@Size(386 216)
-window_3_symbol=GOOG
-window_3_pos=@Point(-602 144)
-window_3_size=@Size(406 216)
-window_4_symbol=NVDA
-window_4_pos=@Point(-1014 144)
-window_4_size=@Size(400 216)
-window_5_symbol=MSFT
-window_5_pos=@Point(-1015 388)
-window_5_size=@Size(393 216)
-window_10_symbol=AAPL
-window_10_pos=@Point(-599 388)
-window_10_size=@Size(400 216)
-window_11_pos=@Point(768 408)
-window_11_size=@Size(384 216)
-window_11_symbol=MU
-window_12_pos=@Point(768 408)
-window_12_size=@Size(384 216)
+window_1_pos=@Point(-1538 6)
+window_1_size=@Size(384 216)
+window_1_symbol=MU
+window_1_bought_line_value=456
+window_2_pos=@Point(-867 241)
+window_2_size=@Size(419 216)
+window_2_symbol=VVSM.DE
+window_3_pos=@Point(-1350 245)
+window_3_size=@Size(475 216)
+window_3_symbol=BTC-USD
+window_4_pos=@Point(-1572 655)
+window_4_size=@Size(390 216)
+window_4_symbol=AAPL
